Correct the usage of sse41 and USE_SSE41 in x64 Makefile configurations

--- a/src/Makefile
+++ b/src/Makefile
@@ -101,9 +101,9 @@ endif
 # the user can override with `make ARCH=x86-32-vnni256 SUPPORTED_ARCH=true`
 ifeq ($(ARCH), $(filter $(ARCH), \
                  x86-64-vnni512 x86-64-vnni256 x86-64-avx512 x86-64-bmi2 x86-64-avx2 \
-                 x86-64-sse41-popcnt x86-64-modern x86-64-ssse3 x86-64-sse3-popcnt \
-                 x86-64 x86-32-sse41-popcnt x86-32-sse2 x86-32 ppc-64 ppc-32 e2k \
-                 armv7 armv7-neon armv8 apple-silicon general-64 general-32))
+                 x86-64-modern x86-64-ssse3 x86-64-sse3-popcnt x86-64 \
+                 x86-32-sse41-popcnt x86-32-sse2 x86-32 ppc-64 ppc-32 \
+                 armv7 armv7-neon armv8 e2k apple-silicon general-64 general-32))
    SUPPORTED_ARCH=true
 else
    SUPPORTED_ARCH=false
@@ -180,7 +180,6 @@ ifeq ($(findstring -modern,$(ARCH)),-modern)
 	sse = yes
 	sse2 = yes
 	ssse3 = yes
-	sse41 = yes
 endif
 
 ifeq ($(findstring -avx2,$(ARCH)),-avx2)
@@ -188,7 +187,6 @@ ifeq ($(findstring -avx2,$(ARCH)),-avx2)
 	sse = yes
 	sse2 = yes
 	ssse3 = yes
-	sse41 = yes
 	avx2 = yes
 endif
 
@@ -197,7 +195,6 @@ ifeq ($(findstring -bmi2,$(ARCH)),-bmi2)
 	sse = yes
 	sse2 = yes
 	ssse3 = yes
-	sse41 = yes
 	avx2 = yes
 	pext = yes
 endif
@@ -207,7 +204,6 @@ ifeq ($(findstring -avx512,$(ARCH)),-avx512)
 	sse = yes
 	sse2 = yes
 	ssse3 = yes
-	sse41 = yes
 	avx2 = yes
 	pext = yes
 	avx512 = yes
@@ -218,7 +214,6 @@ ifeq ($(findstring -vnni256,$(ARCH)),-vnni256)
 	sse = yes
 	sse2 = yes
 	ssse3 = yes
-	sse41 = yes
 	avx2 = yes
 	pext = yes
 	vnni256 = yes
@@ -229,7 +224,6 @@ ifeq ($(findstring -vnni512,$(ARCH)),-vnni512)
 	sse = yes
 	sse2 = yes
 	ssse3 = yes
-	sse41 = yes
 	avx2 = yes
 	pext = yes
 	avx512 = yes
@@ -685,8 +679,7 @@ help:
 	@echo "x86-64-avx512           > x86 64-bit with avx512 support"
 	@echo "x86-64-bmi2             > x86 64-bit with bmi2 support"
 	@echo "x86-64-avx2             > x86 64-bit with avx2 support"
-	@echo "x86-64-sse41-popcnt     > x86 64-bit with sse41 and popcnt support"
-	@echo "x86-64-modern           > common modern CPU, currently x86-64-sse41-popcnt"
+	@echo "x86-64-modern           > common modern CPU, currently x86-64-sse3-popcnt"
 	@echo "x86-64-ssse3            > x86 64-bit with ssse3 support"
 	@echo "x86-64-sse3-popcnt      > x86 64-bit with sse3 and popcnt support"
 	@echo "x86-64                  > x86 64-bit generic (with sse2 support)"
