--- a/src/Makefile
+++ b/src/Makefile
@@ -101,8 +101,8 @@ endif
 # the user can override with `make ARCH=x86-32-vnni256 SUPPORTED_ARCH=true`
 ifeq ($(ARCH), $(filter $(ARCH), \
                  x86-64-vnni512 x86-64-vnni256 x86-64-avx512 x86-64-bmi2 x86-64-avx2 \
-                 x86-64-modern x86-64-ssse3 x86-64-sse3-popcnt x86-64 \
-                 x86-32-sse41-popcnt x86-32-sse2 x86-32 ppc-64 ppc-32 \
+                 x86-64-sse41-popcnt x86-64-modern x86-64-ssse3 x86-64-sse3-popcnt \
+                 x86-64 x86-32-sse41-popcnt x86-32-sse2 x86-32 ppc-64 ppc-32 \
                  armv7 armv7-neon armv8 e2k apple-silicon general-64 general-32))
    SUPPORTED_ARCH=true
 else
@@ -180,6 +180,7 @@ ifeq ($(findstring -modern,$(ARCH)),-modern)
 	sse = yes
 	sse2 = yes
 	ssse3 = yes
+	sse41 = yes
 endif
 
 ifeq ($(findstring -avx2,$(ARCH)),-avx2)
@@ -679,7 +680,8 @@ help:
 	@echo "x86-64-avx512           > x86 64-bit with avx512 support"
 	@echo "x86-64-bmi2             > x86 64-bit with bmi2 support"
 	@echo "x86-64-avx2             > x86 64-bit with avx2 support"
-	@echo "x86-64-modern           > common modern CPU, currently x86-64-sse3-popcnt"
+	@echo "x86-64-sse41-popcnt     > x86 64-bit with sse41 and popcnt support"
+	@echo "x86-64-modern           > common modern CPU, currently x86-64-sse41-popcnt"
 	@echo "x86-64-ssse3            > x86 64-bit with ssse3 support"
 	@echo "x86-64-sse3-popcnt      > x86 64-bit with sse3 and popcnt support"
 	@echo "x86-64                  > x86 64-bit generic (with sse2 support)"
