add macOS and windows to CI
- macOS
  - system clang
  - gcc
- windows / msys2
  - mingw 64-bit gcc
  - mingw 32-bit gcc
- minor code fixes to get new CI jobs to pass
  - suppress unused-parameter warning on 32-bit windows
  - Makefile
    - on macos use 'x86-64' in place of 'any' for arch
    - avoids clang compiler error: "invalid arch name '-arch any'"

--- a/src/Makefile
+++ b/src/Makefile
@@ -256,6 +256,12 @@ endif
 
 ifeq ($(ARCH),general-64)
 	arch = any
+	# avoid apple clang error: "invalid arch name '-arch any'"
+	ifeq ($(KERNEL),Darwin)
+		arch = x86_64
+		sse = yes
+		sse2 = yes
+	endif
 endif
 
 ifeq ($(ARCH),armv7)
