Mingw requires -mxsave compiler flag for _xgetbv

--- a/src/Makefile
+++ b/src/Makefile
@@ -368,7 +368,7 @@ ifeq ($(COMP),mingw)
 		CXX=g++
 	endif
 
-	CXXFLAGS += -Wextra -Wshadow
+	CXXFLAGS += -Wextra -Wshadow -mxsave
 	LDFLAGS += -static
 endif
 
