--- a/.github/workflows/stockfish.yml
+++ b/.github/workflows/stockfish.yml
@@ -16,7 +16,6 @@ jobs:
     env:
       COMPILER: ${{ matrix.config.compiler }}
       COMP: ${{ matrix.config.comp }}
-      CXXFLAGS: "-Werror"
     strategy:
       matrix:
         config:
@@ -129,7 +128,7 @@ jobs:
       - name: Test debug x86-32 build
         if: ${{ matrix.config.run_32bit_tests }}
         run: |
-          export CXXFLAGS="-Werror -D_GLIBCXX_DEBUG"
+          export CXXFLAGS="-D_GLIBCXX_DEBUG"
           make clean
           make -j2 ARCH=x86-32 optimize=no debug=yes build
           ../tests/signature.sh $benchref
@@ -167,7 +166,7 @@ jobs:
       - name: Test debug x86-64-modern build
         if: ${{ matrix.config.run_64bit_tests }}
         run: |
-          export CXXFLAGS="-Werror -D_GLIBCXX_DEBUG"
+          export CXXFLAGS="-D_GLIBCXX_DEBUG"
           make clean
           make -j2 ARCH=x86-64-modern optimize=no debug=yes build
           ../tests/signature.sh $benchref
