--- a/src/Makefile
+++ b/src/Makefile
@@ -493,7 +493,7 @@ endif
 ### 3.3 Optimization
 ifeq ($(optimize),yes)
 
-	CXXFLAGS += -O3
+	CXXFLAGS += -O3 -fno-tree-slp-vectorize
 
 	ifeq ($(comp),gcc)
 		ifeq ($(OS), Android)
