--- a/src/Makefile
+++ b/src/Makefile
@@ -333,9 +333,11 @@ endif
 ### ==========================================================================
 
 ### 3.1 Selecting compiler (default = gcc)
-CXXFLAGS += -Wall -Wcast-qual -fno-exceptions -std=c++17 $(EXTRACXXFLAGS)
-DEPENDFLAGS += -std=c++17
-LDFLAGS += $(EXTRALDFLAGS)
+override EXTRACXXFLAGS := $(EXTRACXXFLAGS)
+override EXTRALDFLAGS := $(EXTRALDFLAGS)
+override CXXFLAGS += -Wall -Wcast-qual -fno-exceptions -std=c++17 $(EXTRACXXFLAGS)
+override DEPENDFLAGS += -std=c++17
+override LDFLAGS += $(EXTRALDFLAGS)
 
 ifeq ($(COMP),)
 	COMP=gcc
