Add MMX code for element-wise multiplication
Improves NNUE bench performance by about 25% on a Pentium III 1.13 GHz:
Before: 42097 nodes/second
After (MMX, no SSE): 51690 nodes/second
After (MMX and SSE): 53045 nodes/second

No functional change.

--- a/src/Makefile
+++ b/src/Makefile
@@ -567,7 +567,7 @@ endif
 ### 3.5 prefetch and popcount
 ifeq ($(prefetch),yes)
 	ifeq ($(sse),yes)
-		CXXFLAGS += -msse
+		CXXFLAGS += -DUSE_SSE -msse
 	endif
 else
 	CXXFLAGS += -DNO_PREFETCH
