--- a/src/Makefile
+++ b/src/Makefile
@@ -352,11 +352,13 @@ LDFLAGS += $(EXTRALDFLAGS)
 ifeq ($(COMP),)
 	COMP=gcc
 	CXXFLAGS += -D_GLIBCXX_DEBUG
+	debug = yes
 endif
 
 ifeq ($(COMP),gcc)
 	comp=gcc
 	CXX=g++
+	debug = yes
 	CXXFLAGS += -D_GLIBCXX_DEBUG -pedantic -Wextra -Wshadow
 
 	ifeq ($(arch),$(filter $(arch),armv7 armv8))
