Remove NDEBUG flag

--- a/src/Makefile
+++ b/src/Makefile
@@ -351,13 +351,11 @@ LDFLAGS += $(EXTRALDFLAGS)
 
 ifeq ($(COMP),)
 	COMP=gcc
-	debug = yes
 endif
 
 ifeq ($(COMP),gcc)
 	comp=gcc
 	CXX=g++
-	debug = yes
 	CXXFLAGS += -pedantic -Wextra -Wshadow
 
 	ifeq ($(arch),$(filter $(arch),armv7 armv8))
@@ -522,7 +520,7 @@ endif
 
 ### 3.2.1 Debugging
 ifeq ($(debug),no)
-	CXXFLAGS += -DNDEBUG
+	#CXXFLAGS += -DNDEBUG
 else
 	CXXFLAGS += -g
 endif
