Revert "Make debug and nondebug builds identical"
This reverts commit c765b838857af1c1e122794c5f6538323fc62448.

--- a/src/Makefile
+++ b/src/Makefile
@@ -351,13 +351,12 @@ LDFLAGS += $(EXTRALDFLAGS)
 
 ifeq ($(COMP),)
 	COMP=gcc
-	CXXFLAGS += -D_GLIBCXX_DEBUG
 endif
 
 ifeq ($(COMP),gcc)
 	comp=gcc
 	CXX=g++
-	CXXFLAGS += -D_GLIBCXX_DEBUG -pedantic -Wextra -Wshadow
+	CXXFLAGS += -pedantic -Wextra -Wshadow
 
 	ifeq ($(arch),$(filter $(arch),armv7 armv8))
 		ifeq ($(OS),Android)
@@ -521,7 +520,7 @@ endif
 
 ### 3.2.1 Debugging
 ifeq ($(debug),no)
-	CXXFLAGS += -g
+	CXXFLAGS += -DNDEBUG
 else
 	CXXFLAGS += -g
 endif
