Output compiler during builds

--- a/src/Makefile
+++ b/src/Makefile
@@ -867,6 +867,7 @@ all: $(EXE) .depend
 config-sanity: net
 	@echo ""
 	@echo "Config:"
+	@echo "Comp: '$(comp)'"
 	@echo "debug: '$(debug)'"
 	@echo "sanitize: '$(sanitize)'"
 	@echo "optimize: '$(optimize)'"
