Revert "Change mingw to use -dumpmachine rather than --version"
This reverts commit 5e127bc8db111ed0b58f2f3dab8e89bf86746180.

--- a/src/Makefile
+++ b/src/Makefile
@@ -502,8 +502,7 @@ ifeq ($(COMP),gcc)
 		profile_make = clang-profile-make
 		profile_use = clang-profile-use
 	endif
-	gcctarget = $(shell $(CXX) -dumpmachine)
-	gccismingw = $(findstring mingw, $(gcctarget))
+	gccismingw = $(findstring MSYS2, $(gccversion))
 endif
 
 ### On mingw use Windows threads, otherwise POSIX
