Revert "Fix typo"
This reverts commit 05ce620f42cf9f27b3624ffe83161e5ff08d956e.

--- a/src/Makefile
+++ b/src/Makefile
@@ -502,7 +502,7 @@ ifeq ($(COMP),gcc)
 		profile_make = clang-profile-make
 		profile_use = clang-profile-use
 	endif
-	gccismingw = $(findstring MSYS2, $(gccversion))
+	gccismingw = $(findstring MYSYS2, $(gccversion))
 endif
 
 ### On mingw use Windows threads, otherwise POSIX
