Revert "Fix copy paste error"
This reverts commit 46208694b4e2dfd0e271854c1db67422da2224b2.

--- a/src/Makefile
+++ b/src/Makefile
@@ -502,7 +502,7 @@ ifeq ($(COMP),gcc)
 		profile_make = clang-profile-make
 		profile_use = clang-profile-use
 	endif
-	gccismingw = $(findstring MYSYS2, $(gccversion))
+	gccismingw = $(findstring mingw, $(gccversion))
 endif
 
 ### On mingw use Windows threads, otherwise POSIX
