Change CI to use comp=mingw

--- a/.github/workflows/stockfish.yml
+++ b/.github/workflows/stockfish.yml
@@ -82,7 +82,7 @@ jobs:
               name: "Windows 2022 Mingw-w64 GCC x86_64",
               os: windows-2022,
               compiler: g++,
-              comp: gcc,
+              comp: mingw,
               run_64bit_tests: true,
               msys_sys: 'mingw64',
               msys_env: 'x86_64',
@@ -92,7 +92,7 @@ jobs:
               name: "Windows 2022 Mingw-w64 GCC i686",
               os: windows-2022,
               compiler: g++,
-              comp: gcc,
+              comp: mingw,
               run_32bit_tests: true,
               msys_sys: 'mingw32',
               msys_env: 'i686',
