Add mingw detection to Makefile when COMP is not set explicitly

--- a/src/Makefile
+++ b/src/Makefile
@@ -350,7 +350,12 @@ DEPENDFLAGS += -std=c++17
 LDFLAGS += $(EXTRALDFLAGS)
 
 ifeq ($(COMP),)
-	COMP=gcc
+	g++target=$(shell g++ -dumpmachine)
+	ifneq ($(findstring mingw,$(g++target)),)
+		COMP=mingw
+	else
+		COMP=gcc
+	endif
 endif
 
 ifeq ($(COMP),gcc)
